# m1-eval

./: Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: cli.md
docs/plans/: 2026-06-23-phase-1-plan.md  2026-06-23-phase-2-plan.md  2026-06-23-phase-3-plan.md
docs/specs/: 2026-06-23-m1-eval-design.md
src/: calib.rs  counterfactual.rs  coverage.rs  diff.rs  engine.rs  env.rs  error.rs  expr.rs  ident.rs  lib.rs  loader.rs  log.rs  runner.rs  scenario.rs  stmt.rs  summary.rs  table.rs  trace.rs  value.rs
src/builtins/: calculate.rs  convert.rs  enum_conv.rs  io_stub.rs  limit.rs  mod.rs  stateful.rs  userfn.rs
src/log/: ld.rs
tests/: can_stub.rs  cli.rs  evm1_smoke.rs  ld_smoke.rs  script_exec.rs  snapshot.rs
tests/fixtures/can_stub/: Project.m1prj
tests/fixtures/can_stub/Scripts/: CanDemo.Read.m1scr
tests/fixtures/cfrate/: Project.m1prj
tests/fixtures/cfrate/Scripts/: CR.Four.m1scr  CR.Slow.m1scr
tests/fixtures/cone/: Project.m1prj
tests/fixtures/cone/Scripts/: B.Consumer.m1scr  Z.Producer.m1scr
tests/fixtures/counterfactual/: Project.m1prj
tests/fixtures/counterfactual/Scripts/: B.B.m1scr  C.C.m1scr  Z.A.m1scr
tests/fixtures/enums/: Project.m1prj
tests/fixtures/enums/Scripts/: Demo.Update.m1scr
tests/fixtures/integral/: Project.m1prj
tests/fixtures/integral/Scripts/: Acc.Update.m1scr
tests/fixtures/mini/Scripts/: Demo.Update.m1scr
tests/fixtures/multirate/: Project.m1prj
tests/fixtures/multirate/Scripts/: MR.Fast Reader.m1scr  MR.Fast Writer.m1scr  MR.Init.m1scr  MR.Slow Integrator.m1scr  MR.Slow Writer.m1scr
tests/fixtures/ratemix/: Project.m1prj
tests/fixtures/ratemix/Scripts/: RX.Fast Counter.m1scr  RX.Mid Counter.m1scr
tests/fixtures/userfn/: Project.m1prj
tests/fixtures/userfn/Scripts/: Caller.Update.m1scr  Helper.Compute.m1scr  Recur.Loop.m1scr
tests/snapshots/: snapshot__cone_trace.snap  snapshot__coverage_render.snap  snapshot__coverage_schedule_render.snap  snapshot__integral_trace.snap  snapshot__single_function_trace.snap  snapshot__whole_project_trace.snap
