[package]
name = "m1-eval"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Evaluator/interpreter for the MoTeC M1 scripting language"
license = "GPL-3.0-or-later"
publish = false

[[bin]]
name = "m1-eval"
path = "src/bin/m1_eval.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
roxmltree = "0.20"
m1-core = { git = "https://github.com/C-Nucifora/m1-core.git", tag = "v0.12.0" }
m1-typecheck = { git = "https://github.com/C-Nucifora/m1-typecheck.git", tag = "v0.36.0" }

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
insta = "1"

[profile.release]
opt-level = 3
